# ky-app

./: README.md
.devcontainer/: devcontainer.json
.devcontainer/Eye-Browser/: index.html
.github/workflows/: static.yml
ky-app-main/: CMakeLists.txt  CNAME  Home _ Kentucky Payments.html  README.md  api.md  package.json  workflow.txt
ky-app-main/app/: app.c  app.h
ky-app-main/card/: card.c  card.h
ky-app-main/main/: main.c  types.h
ky-app-main/server/: server.c  server.h
ky-app-main/terminal/: terminal.c  terminal.h
ky-app-shop/: main.js  package-lock.json  package.json
